# tinkering

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: reader.hpp  serial.hpp  table.hpp  writer.hpp
src/: main.cpp  reader.cpp  serial.cpp  table.cpp  writer.cpp
tests/: table.cpp
